--- a/secrets_ci.yaml
+++ b/secrets_ci.yaml
@@ -32,3 +32,4 @@ unifi_protect_password: secret
 
 octoprint_host: 127.0.0.1
 octoprint_api_key: ffffffffffffffffffffffffffffffff
+octoprint_shutdown: "curl -s http://127.0.0.1/api/system/commands/core/shutdown -X POST -H 'X-Api-Key: ffffffffffffffffffffffffffffffff'"
