Turn off office space heater when I leave

--- a/automations/presence.yaml
+++ b/automations/presence.yaml
@@ -5,12 +5,19 @@
       entity_id: group.family
       to: 'not_home'
   action:
-    - service: climate.set_preset_mode
-      entity_id: climate.hallway
-      data:
-        preset_mode: Away
-    - service: homeassistant.turn_off
-      entity_id: switch.space_heater
+    service: climate.set_preset_mode
+    entity_id: climate.hallway
+    data:
+      preset_mode: Away
+
+- alias: Turn off things when Sam leaves
+  trigger:
+    - platform: state
+      entity_id: person.sam
+      to: 'not_home'
+  action:
+    service: homeassistant.turn_off
+    entity_id: switch.space_heater
 
 - id: arrive-home
   alias: 'Turn on things when someone arrives'
