--- a/secrets_ci.yaml
+++ b/secrets_ci.yaml
@@ -33,3 +33,6 @@ unifi_protect_password: secret
 octoprint_host: 127.0.0.1
 octoprint_api_key: ffffffffffffffffffffffffffffffff
 octoprint_shutdown: "curl -s http://127.0.0.1/api/system/commands/core/shutdown -X POST -H 'X-Api-Key: ffffffffffffffffffffffffffffffff'"
+
+somfy_host: 127.0.0.1
+somfy_system_id: ffffffffff
