--- a/groups.yaml
+++ b/groups.yaml
@@ -66,3 +66,10 @@ garage_doors:
   entities:
     - cover.shop_door
     - cover.garage_door
+
+shades:
+  icon: mdi:blinds
+  entities:
+    - cover.living_room
+    - cover.dining_room
+    - cover.kitchen
