Create scenes for office

--- a/automations/switches.yaml
+++ b/automations/switches.yaml
@@ -6,8 +6,8 @@
       device_ieee: "00:17:88:01:02:d4:34:c0"
       command: "on"
   action:
-    service: homeassistant.turn_on
-    entity_id: light.office_overhead
+    service: scene.turn_on
+    entity_id: scene.office_on
 
 - alias: "Office Switch - Off"
   trigger:
@@ -17,7 +17,5 @@
       device_ieee: "00:17:88:01:02:d4:34:c0"
       command: "off_with_effect"
   action:
-    service: homeassistant.turn_off
-    entity_id:
-      - light.office_overhead
-      - switch.space_heater
+    service: scene.turn_on
+    entity_id: scene.office_off
