--- a/integrations/homekit.yaml
+++ b/integrations/homekit.yaml
@@ -28,6 +28,6 @@ filter:
     - light.master_bedroom_hallway_overhead
     - light.master_bedroom_overhead
     - light.office_overhead
-    - light.office_closet_2
+    - light.office_closet_overhead
     - light.sams_lamp
     - light.sofa_lightstrip
