--- a/integrations/homekit.yaml
+++ b/integrations/homekit.yaml
@@ -24,8 +24,7 @@ filter:
     - light.kitchen_overhead
     - light.living_room_arc_lamp
     - light.living_room_lamp
-    - light.master_bathroom_overhead
-    - light.master_bedroom_hallway_overhead
+    - light.master_bathroom_vanity
     - light.master_bedroom_overhead
     - light.office_overhead
     - light.office_closet_overhead
