--- a/groups.yaml
+++ b/groups.yaml
@@ -12,9 +12,10 @@ outdoor_lights:
 
 sonos:
   entities:
-    - media_player.kitchen
     - media_player.guest_bathroom
+    - media_player.kitchen
     - media_player.living_room
+    - media_player.master_bathroom
     - media_player.master_bedroom
     - media_player.office
 
