--- a/scripts/sonos.yaml
+++ b/scripts/sonos.yaml
@@ -8,10 +8,7 @@ sonos_party_mode:
       data:
         master: media_player.living_room
       entity_id:
-        - media_player.master_bedroom
-        - media_player.guest_bathroom
-        - media_player.office
-        - media_player.guest_bathroom
+        - group.sonos
 
 sonos_pause_all:
   sequence:
