Just wait for OctoPrint to shutdown

--- a/scripts/3d_printer.yaml
+++ b/scripts/3d_printer.yaml
@@ -1,7 +1,6 @@
 3d_printer_shutdown:
   sequence:
     - service: shell_command.octoprint_shutdown
-    - wait_template: "{{ states('binary_sensor.binary_sensor.octoprint_printing') == 'unknown' }}"
-      timeout: '00:00:15'
+    - delay: 15
     - service: homeassistant.turn_off
       entity_id: switch.3d_printer
