Update Unifi Protect

--- a/secrets_ci.yaml
+++ b/secrets_ci.yaml
@@ -27,6 +27,7 @@ mysql_url: mysql://hass:ffffffffffffffffffffffffffffffffffff@core-mariadb/homeas
 myq_username: sam@example.com
 myq_password: secret
 
+unifi_protect_host: 127.0.0.1
 unifi_protect_username: sam
 unifi_protect_password: secret
 
