--- a/integrations/unifiprotect.yaml
+++ b/integrations/unifiprotect.yaml
@@ -1,3 +1,3 @@
-host: 10.0.0.83
+host: !secret unifi_protect_host
 username: !secret unifi_protect_username
 password: !secret unifi_protect_password
