--- a/ui/home.yaml
+++ b/ui/home.yaml
@@ -4,46 +4,31 @@ cards:
   - type: custom:search-card
     max_results: 10
 
-  - type: picture-entity
-    entity: camera.front_porch
-    name: Front Porch
-
   - type: thermostat
     entity: climate.hallway
 
-  - type: horizontal-stack
+  - type: vertical-stack
     cards:
-      - type: entity-button
-        name: Front Door
-        entity: lock.front_door
-        tap_action:
-          action: toggle
-      - type: entity-button
-        entity: cover.shop_door
-      - type: entity-button
-        entity: cover.garage_door
+      - type: picture-entity
+        entity: camera.front_porch
+        name: Front Porch
+      - type: picture-entity
+        entity: camera.driveway
+        name: Driveway
 
   - type: weather-forecast
     entity: weather.dark_sky
 
-  - type: glance
-    show_icon: true
-    show_name: true
-    show_state: true
-    title: COVID-19 (US)
-    entities:
-      - entity: sensor.us_coronavirus_confirmed
-        icon: 'mdi:emoticon-neutral-outline'
-        name: Confirmed
-      - entity: sensor.us_coronavirus_current
-        icon: 'mdi:emoticon-frown-outline'
-        name: Current
-      - entity: sensor.us_coronavirus_recovered
-        icon: 'mdi:emoticon-happy-outline'
-        name: Recovered
-      - entity: sensor.us_coronavirus_deaths
-        icon: 'mdi:emoticon-dead-outline'
+  - type: vertical-stack
+    cards:
+      - type: sensor
+        entity: sensor.us_coronavirus_current
+        name: Current Cases
+        graph: line
+      - type: sensor
+        entity: sensor.us_coronavirus_deaths
         name: Deaths
+        graph: line
 
   - type: entities
     title: Modes
