--- a/integrations/light.yaml
+++ b/integrations/light.yaml
@@ -76,5 +76,5 @@
     - light.kitchen_recessed
 
 - platform: switch
-  name: Living Room Shelf Lamp
-  entity_id: switch.living_room_shelf_lamp
+  name: Bulb Lamp
+  entity_id: switch.bulb_lamp
