--- a/secrets_ci.yaml
+++ b/secrets_ci.yaml
@@ -12,6 +12,7 @@ august_password: secret
 dyson_username: sam@example.com
 dyson_password: secret
 dyson_fan_id: C2A-US-MDB0000A
+dyson_fan_ip: 192.168.1.1
 
 dark_sky_api_key: ffffffffffffffffffffffffffffffff
 
