--- a/integrations/homekit.yaml
+++ b/integrations/homekit.yaml
@@ -13,6 +13,7 @@ filter:
     - light.bonus_room_overhead
     - light.bulb_lamp
     - light.chair_lightstrip
+    - light.desk_lamp
     - light.dining_room_overhead
     - light.ellens_lamp
     - light.entryway_overhead
@@ -31,3 +32,4 @@ filter:
     - light.office_closet_overhead
     - light.sams_lamp
     - light.sofa_lightstrip
+    - switch.space_heater
