--- a/integrations/homekit.yaml
+++ b/integrations/homekit.yaml
@@ -11,7 +11,6 @@ filter:
   include_entities:
     - light.back_porch
     - light.bonus_room_overhead
-    - light.bulb_lamp
     - light.chair_lightstrip
     - light.desk_lamp
     - light.dining_room_overhead
@@ -33,3 +32,4 @@ filter:
     - light.sams_lamp
     - light.sofa_lightstrip
     - switch.space_heater
+    - switch.ellen_space_heater
