--- a/groups.yaml
+++ b/groups.yaml
@@ -16,7 +16,7 @@ sonos:
   name: Sonos
   icon: mdi:speaker
   entities:
-    - media_player.guest_bathroom
+    - media_player.garage
     - media_player.kitchen
     - media_player.living_room
     - media_player.master_bathroom
@@ -85,8 +85,8 @@ garage_doors:
   name: Garage Doors
   icon: mdi:garage
   entities:
-    - cover.shop_door
-    - cover.garage_door
+    - cover.left_garage_door
+    - cover.right_garage_door
 
 shades:
   name: Shades
