--- a/integrations/light.yaml
+++ b/integrations/light.yaml
@@ -78,3 +78,7 @@
 - platform: switch
   name: Bulb Lamp
   entity_id: switch.bulb_lamp
+
+- platform: switch
+  name: 3D Printer LEDs
+  entity_id: switch.3d_printer_lights
