--- a/ui/status.yaml
+++ b/ui/status.yaml
@@ -1,12 +1,11 @@
 title: Status
 path: status
 cards:
-  - type: custom:group-card
-    card:
-      type: entities
-      title: People
-      show_header_toggle: false
-    group: group.family
+  - type: entities
+    title: People
+    show_header_toggle: false
+    entities:
+      - person.sam
 
   - type: custom:group-card
     card:
