--- a/configuration.yaml
+++ b/configuration.yaml
@@ -40,7 +40,7 @@ hacs: !include integrations/hacs.yaml
 homekit: !include integrations/homekit.yaml
 input_boolean: !include integrations/input_boolean.yaml
 light: !include integrations/light.yaml
-# octoprint: !include integrations/octoprint.yaml
+octoprint: !include integrations/octoprint.yaml
 scene: !include scenes.yaml
 sensor: !include integrations/sensor.yaml
 shell_command: !include integrations/shell_command.yaml
