--- a/groups.yaml
+++ b/groups.yaml
@@ -36,8 +36,8 @@ window_sensors:
     - binary_sensor.guest_bedroom_right_window
     - binary_sensor.kitchen_window
     - binary_sensor.laundry_window
-    - binary_sensor.living_room_left_window
-    - binary_sensor.living_room_right_window
+    - binary_sensor.living_room_window_left
+    - binary_sensor.living_room_window_right
     - binary_sensor.master_bathroom_window
     - binary_sensor.master_bedroom_window
     - binary_sensor.office_window
@@ -65,8 +65,8 @@ batteries:
     - sensor.hall_closet_door_battery
     - sensor.kitchen_window_battery
     - sensor.laundry_window_battery
-    - sensor.living_room_left_window_battery
-    - sensor.living_room_right_window_battery
+    - sensor.living_room_window_left_battery
+    - sensor.living_room_window_right_battery
     - sensor.master_bathroom_window_battery
     - sensor.master_bedroom_window_battery
     - sensor.mini_button_battery
@@ -86,6 +86,8 @@ shades:
   name: Shades
   icon: mdi:blinds
   entities:
-    - cover.living_room
     - cover.dining_room
     - cover.kitchen
+    - cover.living_room
+    - cover.master_bedroom
+    - cover.office
