--- a/configuration.yaml
+++ b/configuration.yaml
@@ -45,6 +45,7 @@ scene: !include scenes.yaml
 sensor: !include integrations/sensor.yaml
 shell_command: !include integrations/shell_command.yaml
 somfy_mylink: !include integrations/somfy_mylink.yaml
+spotify: !include integrations/spotify.yaml
 timer: !include integrations/timer.yaml
 unifiprotect: !include integrations/unifiprotect.yaml
 weather: !include integrations/weather.yaml
