--- a/secrets_ci.yaml
+++ b/secrets_ci.yaml
@@ -38,3 +38,6 @@ octoprint_shutdown: "curl -s http://127.0.0.1/api/system/commands/core/shutdown 
 
 somfy_host: 127.0.0.1
 somfy_system_id: ffffffffff
+
+spotify_client_id: ffffffffffffffffffffffffffffffff
+spotify_client_secret: ffffffffffffffffffffffffffffffff
