--- a/ui/home.yaml
+++ b/ui/home.yaml
@@ -1,9 +1,6 @@
 title: Home
 path: home
 cards:
-  - type: custom:search-card
-    max_results: 10
-
   - type: thermostat
     entity: climate.hallway
 
@@ -13,6 +10,13 @@ cards:
       title: Shades
       show_header_toggle: false
     group: group.shades
+
+  - type: entities
+    title: Garage
+    show_header_toggle: false
+    entities:
+      - cover.car_garage_door
+      - cover.shop_garage_door
 
   - type: vertical-stack
     cards:
@@ -25,17 +29,6 @@ cards:
 
   - type: weather-forecast
     entity: weather.dark_sky
-
-  # - type: vertical-stack
-  #   cards:
-  #     - type: sensor
-  #       entity: sensor.us_coronavirus_current
-  #       name: Current Cases
-  #       graph: line
-  #     - type: sensor
-  #       entity: sensor.us_coronavirus_deaths
-  #       name: Deaths
-  #       graph: line
 
   - type: entities
     title: Modes
