--- a/ui/switches.yaml
+++ b/ui/switches.yaml
@@ -2,6 +2,31 @@ title: Switches
 path: switches
 cards:
   - type: entities
+    title: Master Bedroom
+    entities:
+      - cover.master_bedroom
+      - entity: fan.master_bedroom
+        name: Fan
+      - entity: light.master_bedroom_overhead
+        name: Overhead
+      - entity: light.master_bedroom_left_lamp
+        name: Left Lamp
+      - entity: light.master_bedroom_right_lamp
+        name: Right Lamp
+
+  - type: entities
+    title: Living Room
+    entities:
+      - entity: light.living_room_arc_lamp
+        name: Arc Lamp
+      - entity: light.living_room_lamp
+        name: Floor Lamp
+      - light.sofa_lightstrip
+      - light.chair_lightstrip
+      - cover.living_room
+      - light.bulb_lamp
+
+  - type: entities
     title: Bonus Room
     show_header_toggle: false
     entities:
@@ -28,8 +53,8 @@ cards:
     title: Garage
     show_header_toggle: false
     entities:
-      - cover.left_garage_door
-      - cover.right_garage_door
+      - cover.car_garage_door
+      - cover.shop_garage_door
       - entity: light.garage_hallway_overhead
         name: Hallway Overhead
 
@@ -59,36 +84,11 @@ cards:
       - cover.kitchen
 
   - type: entities
-    title: Living Room
-    entities:
-      - entity: light.living_room_arc_lamp
-        name: Arc Lamp
-      - entity: light.living_room_lamp
-        name: Floor Lamp
-      - light.sofa_lightstrip
-      - light.chair_lightstrip
-      - cover.living_room
-      - light.bulb_lamp
-
-  - type: entities
     title: Master Bathroom
     show_header_toggle: false
     entities:
       - entity: light.master_bathroom_vanity
         name: Vanity
-
-  - type: entities
-    title: Master Bedroom
-    entities:
-      - cover.master_bedroom
-      - entity: fan.master_bedroom
-        name: Fan
-      - entity: light.master_bedroom_overhead
-        name: Overhead
-      - entity: light.master_bedroom_left_lamp
-        name: Left Lamp
-      - entity: light.master_bedroom_right_lamp
-        name: Right Lamp
 
   - type: entities
     title: Office
